--- a/src/app/app-products/components/cart-details/cart-details.component.scss
+++ b/src/app/app-products/components/cart-details/cart-details.component.scss
@@ -5,9 +5,14 @@
             height: calc(100vh - 130px) !important;
         }
         .cart-footer{
-            bottom: unset !important;
-            position: unset !important;
-            width: unset !important;
+            // bottom: unset !important;
+            // position: unset !important;
+            // width: unset !important;
+
+            position: fixed !important;
+            width: 100% !important;
+            padding: 0px !important;
+
 
             .place-order-amount{
                 height: 48px !important;
